deploy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: one
  template:
    metadata:
      labels:
        app: one
    spec:
      containers:
        - name: app-one
          image: hashicorp/http-echo
          args: ["-text=Hello from App One"]
          ports:
            - containerPort: 5678
