deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: two
  template:
    metadata:
      labels:
        app: two
    spec:
      containers:
        - name: app-two
          image: hashicorp/http-echo
          args:
            - "-text=Hello from App Two"
          ports:
            - containerPort: 5678
