service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-two 
spec:
  selector:
    app: two
  ports:
    - port: 80
      targetPort: 5678
      protocol: TCP
