serviceone.yaml
apiVersion: v1
kind: Service
metadata:
  name : app-one
spec:
  selector:
    app: one
  ports:
    - port: 80
      targetPort: 5678
      protocol : TCP
