ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-one-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    # - host: app-one.local
    - http: 
        paths: 
        - path: /app-one
          pathType: Prefix
          backend: 
            service: 
              name: app-one
              port: 
                number: 80 
        - path: /app-two
          pathType: Prefix
          backend:
            service:
              name: app-two
              port:
                number: 80
